# autoresearch

./: inference.py  prepare.py  program.md  pyproject.toml  train.py
