[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous AI text detection research for Bittensor SN32"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18,<3.0",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "torch>=2.1",
    "transformers>=4.36",
    "accelerate>=0.25",
    "sentencepiece>=0.2",
    "tiktoken>=0.5",
    "protobuf>=3.20",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
