[project]
name = "autoresearch-affine"
version = "0.1.0"
description = "Autonomous RL research for Bittensor SN120 Affine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.30",
    "peft>=0.11",
    "trl>=0.8",
    "sentencepiece>=0.2",
    "bitsandbytes>=0.43",
    "huggingface-hub>=0.23",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
